--- a/www/index.html.hbs
+++ b/www/index.html.hbs
@@ -30,16 +30,13 @@
       </tr>
     </thead>
     <tbody>
+         {{#each data}}
       <tr>
-        <td><a href="wwwHonourable Bob Juniors 2024">Honourable Bob Juniors 2024</a></td>
-        <td>30/01/2024</td>
-        <td>Hobsons Bay Chess Club</td>
+        <td><a href="{{this.url}}">{{this.name}}</a></td>
+        <td>{{this.start}}</td>
+        <td>{{this.site}}</td>
       </tr>
-      <tr>
-        <td><a href="wwwjunior chess championship">junior club championship</a></td>
-        <td>10/10/2023</td>
-        <td>Hobson bay chess club</td>
-      </tr>
+       {{/each}}
      
     </tbody>
   </table>
